# polybar-media-player

./: .gitignore  README.md  pyproject.toml  setup.cfg
