[tool.poetry]
name = "polybar-media-player"
version = "0.1.0"
description = "Display current song information on Polybar"
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.6"
pygobject = "^3.36.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.0"
mypy = "^0.782"
pytest = "^6.0.1"

[tool.poetry.scripts]
polybar-media-player = "polybar_media_player.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
